--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 About
 =====
 
-This is a demonstration for Pocketsphinx on Android
 
-See for details http://cmusphinx.sourceforge.net/wiki/tutorialandroid
+Приложение для диплома, построенное вокруг pocketsphinx
+
+На данном этапе разработано:
+  1.
