--- a/README
+++ b/README
@@ -5,4 +5,5 @@ About
 Приложение для диплома, построенное вокруг pocketsphinx
 
 На данном этапе разработано:
-  1.
+  1. Способность звонить по шаблону, который пользователь описывает при создании голосовой команды
+  2. То же самое, только для смс
