--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">DiplomaApp</string>
+    <string name="app_name">VoiceControl</string>
     <string name="newCommand_name">Создание новой команды</string>
-    
+    <string name="commandList_name">Список команд</string>
+
     <string name="kws_caption">Для старта скажите \"слушай\".</string>
     <string name="command_caption">Слушаю ваши команды</string>
+    <string name="error_caption">Микрофон используется другим приложением.\n
+    Закройте его и перезапустите приложение.</string>
 
 
 </resources>
